--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ matrix:
         - go: tip
 
 install:
-  - rm -rf $GOPATH/src/srcd.works
-  - mkdir -p $GOPATH/src/srcd.works
-  - ln -s $PWD $GOPATH/src/srcd.works/go-errors.v0
-  - cd $GOPATH/src/srcd.works/go-errors.v0
+  - rm -rf $GOPATH/src/gopkg.in/src-d
+  - mkdir -p $GOPATH/src/gopkg.in/src-d
+  - ln -s $PWD $GOPATH/src/gopkg.in/src-d/go-errors.v0
+  - cd $GOPATH/src/gopkg.in/src-d/go-errors.v0
   - go get -v -t ./...
 
 script:
